--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2271,21 +2271,19 @@ input, select, textarea {
 
 /* Actions */
 
-	ul.actions {
-		display: -moz-flex;
-		display: -webkit-flex;
-		display: -ms-flex;
-		display: flex;
-		cursor: default;
-		list-style: none;
-		margin-left: -1em;
-		padding-left: 0;
-	}
+ul.actions {
+    display: flex;
+    justify-content: space-between; /* 버튼을 양옆으로 배치 */
+    padding-left: 0; /* 기존 패딩 유지 */
+    margin-left: 0;  /* 마진을 0으로 설정하여 불필요한 공간 제거 */
+    list-style: none; /* 리스트 스타일 제거 */
+}
 
-		ul.actions li {
-			padding: 0 0 0 1em;
-			vertical-align: middle;
-		}
+ul.actions li {
+    padding: 0 1em; /* 기존 padding 유지 */
+    vertical-align: middle; /* 기존 디자인 유지 */
+}
+
 
 		ul.actions.special {
 			-moz-justify-content: center;
@@ -2938,7 +2936,7 @@ input, select, textarea {
 			-webkit-flex-direction: row;
 			-ms-flex-direction: row;
 			flex-direction: row;
-			background-color: #324382; #색상
+			background-color: #2e3450; #색상
 		}
 
 			.spotlights > section > .image {
@@ -3000,7 +2998,7 @@ input, select, textarea {
 				-webkit-flex-direction: row-reverse;
 				-ms-flex-direction: row-reverse;
 				flex-direction: row-reverse;
-				background-color: #324382; #색상
+				background-color: #333856; #색상
 			}
 
 				.spotlights > section:nth-child(2n) > .content {
@@ -3410,7 +3408,7 @@ input, select, textarea {
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
 			pointer-events: none;
-			background-color: #324382;
+			background-color: #242943; #색상
 			content: '';
 			display: block;
 			height: 100%;
@@ -3495,7 +3493,7 @@ input, select, textarea {
 		}
 
 		#banner.style2:after {
-			background-color: #8d82c4;
+			background-color: #5b5546; #색상
 		}
 
 		#banner.style3:after {
@@ -3589,7 +3587,7 @@ input, select, textarea {
 /* Main */
 
 	#main {
-		background-color: #2a2f4a;
+		background-color: #2a2f4a; #색상
 	}
 
 		#main > * {
