--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,7 +99,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: #090d1f;
+		background: #251749; #footer 색상
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
@@ -2829,19 +2829,19 @@ ul.actions li {
 			}
 
 			.tiles article:nth-child(6n - 5):before {
-				background-color: #6fc3df;
+				background-color: #afab99; /*색상*/
 			}
 
 			.tiles article:nth-child(6n - 4):before {
-				background-color: #8d82c4;
+				background-color: #263159;
 			}
 
 			.tiles article:nth-child(6n - 3):before {
-				background-color: #ec8d81;
+				background-color: rgb(119, 138, 196);
 			}
 
 			.tiles article:nth-child(6n - 2):before {
-				background-color: #e7b788;
+				background-color: #495579;
 			}
 
 			.tiles article:nth-child(6n - 1):before {
@@ -2936,7 +2936,7 @@ ul.actions li {
 			-webkit-flex-direction: row;
 			-ms-flex-direction: row;
 			flex-direction: row;
-			background-color: #2e3450; #색상
+			/*background-color: #495579; 색상*/
 		}
 
 			.spotlights > section > .image {
@@ -2998,7 +2998,7 @@ ul.actions li {
 				-webkit-flex-direction: row-reverse;
 				-ms-flex-direction: row-reverse;
 				flex-direction: row-reverse;
-				background-color: #333856; #색상
+				/*background-color: #263159; 색상*/
 			}
 
 				.spotlights > section:nth-child(2n) > .content {
@@ -3007,6 +3007,22 @@ ul.actions li {
 					-ms-align-items: -ms-flex-end;
 					align-items: flex-end;
 				}
+				.spotlights > section:nth-child(1) {
+					background-color: rgb(119, 138, 196); 
+				}
+				
+				.spotlights > section:nth-child(2) {
+					background-color: #495579;
+				}
+				
+				.spotlights > section:nth-child(3) {
+					background-color: #afab99;
+				}
+				
+				.spotlights > section:nth-child(4) {
+					background-color: #263159; /* 네 번째 section - 분홍색 */
+				}
+				
 
 		@media screen and (max-width: 1680px) {
 
@@ -3398,27 +3414,28 @@ ul.actions li {
 		top: -3.25em;
 	}
 
-		#banner:after {
-			-moz-transition: opacity 2.5s ease;
-			-webkit-transition: opacity 2.5s ease;
-			-ms-transition: opacity 2.5s ease;
-			transition: opacity 2.5s ease;
-			-moz-transition-delay: 0.75s;
-			-webkit-transition-delay: 0.75s;
-			-ms-transition-delay: 0.75s;
-			transition-delay: 0.75s;
-			pointer-events: none;
-			background-color: #242943; #색상
-			content: '';
-			display: block;
-			height: 100%;
-			left: 0;
-			opacity: 0.85;
-			position: absolute;
-			top: 0;
-			width: 100%;
-			z-index: 1;
-		}
+	#banner:after {
+		-moz-transition: opacity 2.5s ease;
+		-webkit-transition: opacity 2.5s ease;
+		-ms-transition: opacity 2.5s ease;
+		transition: opacity 2.5s ease;
+		-moz-transition-delay: 0.75s;
+		-webkit-transition-delay: 0.75s;
+		-ms-transition-delay: 0.75s;
+		transition-delay: 0.75s;
+		pointer-events: none;
+		background-color: #251749; /* 배경색 */
+		content: '';
+		display: block;
+		height: 100%;
+		left: 0;
+		opacity: 0.85;
+		position: absolute;
+		top: 0;
+		width: 100%;
+		z-index: 1;
+	}
+	
 
 		#banner h1 {
 			font-size: 3.25em;
@@ -3482,10 +3499,13 @@ ul.actions li {
 			height: 75vh;
 			min-height: 30em;
 			max-height: 50em;
+			background-color: #000000;
+			background-image: none;
 		}
 
 			#banner.major.alt {
 				opacity: 0.75;
+
 			}
 
 		#banner.style1:after {
@@ -3493,7 +3513,7 @@ ul.actions li {
 		}
 
 		#banner.style2:after {
-			background-color: #5b5546; #색상
+			background-color: #495579; #색상
 		}
 
 		#banner.style3:after {
@@ -3587,7 +3607,7 @@ ul.actions li {
 /* Main */
 
 	#main {
-		background-color: #2a2f4a; #색상
+		background-color: #263159; /*색상*/
 	}
 
 		#main > * {
@@ -3614,8 +3634,21 @@ ul.actions li {
 
 				}
 
+		/*여기요*/
 		#main.alt {
-			background-color: transparent;
+			background-color: #495579;
+			border-bottom: solid 1px rgba(212, 212, 255, 0.1);
+		}
+		#main.alt1 {
+			background-color: #495579;
+			border-bottom: solid 1px rgba(212, 212, 255, 0.1);
+		}
+		#main.alt2 {
+			background-color: rgb(119, 138, 196);
+			border-bottom: solid 1px rgba(212, 212, 255, 0.1);
+		}
+		#main.alt3 {
+			background-color: rgb(119, 138, 196);
 			border-bottom: solid 1px rgba(212, 212, 255, 0.1);
 		}
 
